@@ -6,15 +6,30 @@ plugins {
 }
 
 jacoco {
-    toolVersion = "0.8.12"
+    toolVersion = "0.8.13"
 }
 
 tasks.jacocoTestReport {
     reports {
         xml.required.set(true)
-        csv.required.set(false)
-        html.outputLocation.set(layout.buildDirectory.dir("jacocoHtml"))
+        html.required.set(true)
     }
+    classDirectories.setFrom(
+        files(classDirectories.files.map {
+            fileTree(it) {
+                exclude(
+                    // swagger
+                    "dto/accountapi/**",
+                    // http
+                    "accountapi/controller/**",
+                    "accountapi/interception/**",
+                    "accountapi/annotation/**",
+                    "accountapi/repository/**",
+                    "accountapi/AccountAPIApplication.class"
+                )
+            }
+        })
+    )
 }
 
 tasks.check {
@@ -28,7 +43,7 @@ description = "AccountAPI"
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
+        languageVersion = JavaLanguageVersion.of(25)
     }
 }
 
@@ -66,6 +81,7 @@ dependencies{
 
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    testImplementation("net.bytebuddy:byte-buddy-agent:1.17.7")
 
 
     implementation("io.jsonwebtoken:jjwt-api:0.13.0")
@@ -77,4 +93,8 @@ dependencies{
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs(
+        "-XX:+EnableDynamicAgentLoading",
+        "-Xshare:off"
+    )
 }
